summative.moria.Moria.scala.error
Compilation error:
Moria:2: error: too many arguments for method right: ()Unit
  right(2)
       ^