summative.moria.Moria.scala.code
do{
  right(2)
  while (isOverBaggle() == false){
    forward()
  }
  
} while (isFacingWall() == false)